<resources>
    <string name="app_name">Assignment</string>

    <string name="fragment_albums_list">Albums</string>
    <string name="fragment_album_detail">Details</string>

    <string name="unknown_host_error">Can\'t connect to server.\nPlease check your internet connection.</string>
    <string name="connection_time_out">Connection TimeOut.\nPlease check your internet connection.</string>
    <string name="api_error_message">Oops\nSomething went wrong while calling API.\nPlease try again later.</string>

    <string name="user_details">User Details</string>
    <string name="show_album_photos">Show Album Photos</string>
    <string name="hide_album_photos">Hide Album Photos</string>
    <string name="show_posts">Show Other Posts</string>
    <string name="hide_posts">Hide Posts</string>
    <string name="ok">OK</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="name">User name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="view_website">Visit Website</string>
    <string name="website">Website</string>
    <string name="image_place_holder_text">Image Here</string>
    <string name="search">Search</string>

    <string name="sort_up">Sort Up</string>
    <string name="sort_down">Sort Down</string>
    <string name="open_using">Open Using</string>

</resources>