...
            android:background="@color/white"
            android:isScrollContainer="false"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/detailsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

...
                        android:layout_height="2dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/app_layout_divider_color" />

                    <LinearLayout
                        android:id="@+id/userDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/userDetailsHeader"
...
                            android:layout_marginTop="10dp"
                            android:background="@drawable/filled_light_grey"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{userModel.name}"
                                android:textColor="@color/app_text_ui_color_grey"
                                android:textSize="17sp"
                                android:textStyle="bold" />
...
                            android:layout_marginTop="10dp"
                            android:background="@drawable/filled_light_grey"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/userEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{userModel.email}"
                                android:textColor="@color/app_text_ui_color_grey"
                                android:textSize="17sp"
                                android:textStyle="bold" />
...
                                android:text="@string/phone"
                                android:textColor="@color/app_text_ui_color_light_grey" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/visitWebsite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/hollow_bg_blue"
                            android:gravity="center"
                            android:orientation="vertical"
...
