<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="SingleRowAlbumBinding">

        <variable
            name="model"
            type="com.assignment.data.models.AlbumModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/placeholder" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{model.title}"
                android:fontFamily="@font/caviar_dreams"
                style="@style/Theme.Assignment.TextViewColor"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>